# serde_bare

./: Cargo.toml  Makefile  README
benches/: user_sessions.rs
benches/go-reference/: go.mod  go.sum  user_test.go
src/: compat.rs  de.rs  error.rs  lib.rs  ser.rs
