[package]
name = "serde_bare"
version = "0.4.0"
authors = ["Tadeo Kondrak <me@tadeo.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "An implementation of the BARE (https://git.sr.ht/~sircmpwn/bare) encoding format."
repository = "https://git.sr.ht/~tdeo/serde_bare"
keywords = ["serde", "bare"]
categories = ["encoding"]
exclude = ["benches/go-reference"]

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11"
criterion = "0.3"

[[bench]]
name = "user_sessions"
harness = false
