[package]
name = "serde_bare"
version = "0.4.0"
resolver = "2"
authors = ["Tadeo Kondrak <me@tadeo.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "An implementation of the BARE (https://git.sr.ht/~sircmpwn/bare) encoding format."
repository = "https://git.sr.ht/~tdeo/serde_bare"
keywords = ["serde", "bare"]
categories = ["encoding"]
exclude = ["benches/go-reference"]

[features]
default = [ "std" ]
std = ["serde/std"]
alloc = ["core2/alloc", "core2/nightly", "serde/alloc", "serde/derive"]

[dependencies]
serde =  { version = "1.0", default-features = false, optional = true }
core2 = { version = "0.3.2", default-features = false, optional = true }

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = { version = "0.11", default-features = false, features = [ "alloc" ] }
criterion = "0.3"

[[bench]]
name = "user_sessions"
harness = false
